force-app/main/default/objects/Holidays__c/Holidays__c.object-meta.xml
<CustomObject>
    <label>Holidays</label>
    <nameField>
        <label>Holidays</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>