force-app/main/default/objects/Holidays__c/fields/Close_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Close_Time_2__c</fullName>
    <label>Close Time 2</label>
    <type>Time</type>
</CustomField>