force-app/main/default/objects/Holidays__c/fields/Holiday_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Schedule</label>
    <referenceTo>Holiday_Schedule__c</referenceTo>
    <relationshipLabel>Holidays</relationshipLabel>
    <relationshipName>Holidays</relationshipName>
    <type>Lookup</type>
</CustomField>