force-app/main/default/objects/Holidays__c/fields/Holiday_Type__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Type__c</fullName>
    <label>Holiday Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed Full Day</fullName>
            </value>
            <value>
                <fullName>Closed Partial Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>